# ufs

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
examples/: basic.rs
examples/files/: demo.txt
examples/files/nested/: big-demo.txt
src/: archives.rs  data.rs  entry.rs  errors.rs  file.rs  lib.rs  path.rs
ufs-macros/: Cargo.toml  README.md
ufs-macros/src/: lib.rs
