[package]
name = "ufs"
version = "0.1.0"
edition = "2024"

description = "ufs embed files and read from disk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p1mo/ufs"
readme = "README.md"
keywords = ["js", "ts", "deno", "plugins"]
categories = ["development-tools"]
authors = ["p1mo <101986259+p1mo@users.noreply.github.com>"]

[dev-dependencies]
anyhow = "1.0.102"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

thiserror = "2.0.17"

tempfile = "3.27.0"

reqwest = { version = "0.13.2", features = [ "blocking", "json" ] }



ufs-macros = { version = "0.1.0" }

[[example]]
name = "basic"
path = "examples/basic.rs"