[package]
name = "ufs"
version = "0.1.2"
edition = "2024"
description = "ufs embed files and read from disk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p1mo/ufs"
readme = "README.md"
keywords = ["js", "ts", "deno", "plugins"]
categories = ["development-tools"]
authors = ["p1mo <101986259+p1mo@users.noreply.github.com>"]



[features]
default = []

all = ["7z", "zip", "tar", "txz", "tgz"]

7z   = ["dep:sevenz-rust2"]
zip  = ["dep:zip"]
tar  = ["dep:tar"]
txz  = ["dep:tar", "dep:xz2"]
tgz  = ["dep:tar", "dep:flate2"]


[build-dependencies]
cfg_aliases = "0.2.1"


[dev-dependencies]
anyhow = "1.0.102"
ufs = { path = ".", features = [ "all" ] }


[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

thiserror = "2.0.17"
#tempfile = "3.27.0"
#reqwest = { version = "0.13.2", features = [ "blocking", "json" ] }

zip = { version = "8.2.0", optional = true }
tar = { version = "0.4.43", optional = true }
flate2 = { version = "1.1.9", optional = true }
xz2 = { version = "0.1.7", optional = true }
sevenz-rust2 = { version = "0.20.2", optional = true }


# internal macros
ufs-macros = { version = "0.1.1", path = "ufs-macros" }



[[example]]
name = "basic"
path = "examples/basic.rs"